[project]
name = "pyshv"
version = "0.5.0"
description = "Pure Python SHV implementation"
readme = "README.rst"
license = {file = "LICENSE"}
authors = [
  { name="Elektroline a.s." },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "Topic :: Home Automation",
  "Topic :: System :: Networking",
  "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
  "pyserial",
  "aioserial",
  "asyncinotify; sys_platform == \"linux\"",
]

[project.urls]
"Homepage" = "https://gitlab.com/elektroline-predator/pyshv"
"Bug Tracker" = "https://gitlab.com/elektroline-predator/pyshv/-/issues"
"Github" = "https://github.com/silicon-heaven/libshv-py"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "sphinx-multiversion",
]

[project.scripts]
pycpconv = "shv.cpconv.__main__:main"
pyshvbroker = "shv.broker.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["docs", "tests*"]
[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
omit = ["tests/*"]
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if typing.TYPE_CHECKING:"
]

[tool.ruff]
target-version = "py311"
exclude = ["tests/*", "docs/*"]
[tool.ruff.lint]
select = ["F", "E", "W", "I", "D", "PL", "ASYNC", "RUF"]
ignore = [
  # Magic methods have defined behavior so what is there to document. __init__
  # should be documented in class docstring.
  "D105", "D107",
  # These have conflicting rules.
  "D203", "D213",
  # Ignore too long lines (format tackles that)
  "E501",
  # Remove too-many limit for more complex code.
  "PLR0911", "PLR0912", "PLR0913", "PLR2004"]
[tool.ruff.format]
docstring-code-format = true
preview = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
