[project]
name = "template-python"
version = "0.0.0"
description = "Project Template Python"
readme = "README.rst"
authors = [
  { name="Elektroline a.s." },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = []

[project.urls]
repository = "http://gitlab.elektroline.cz/emb/template/python"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
]

[project.scripts]
foo = "foo.__main__:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["docs", "tests*"]
[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.coverage.run]
branch = true
omit = ["tests/*"]
[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if typing.TYPE_CHECKING:"
]

[tool.ruff]
target-version = "py311"
[tool.ruff.lint]
select = [
  "F", "E", "W", "I", "N", "D", "UP", "YTT", "ANN", "ASYNC", "TRIO", "S", "BLE",
  "FBT", "B", "A", "COM", "PL", "RUF"
]
ignore = [
  # Magic methods have defined behavior so what is there to document. __init__
  # should be documented in class docstring.
  "D105", "D107",
  # These have conflicting rules.
  "D203", "D213",
  # Ignore too long lines (format tackles that)
  "E501",
  # subprocess can be insecurely used but not is insecure by design
  "S404", "S603",
  # Conflict with formatter
  "COM812",
  # Remove too-many limit for more complex code.
  "PLR0911", "PLR0912", "PLR0913", "PLR2004"
]
preview = true
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D100", "D104", "S101", "ANN001", "ANN002", "ANN201"]
"docs/conf.py" = ["D100", "D103", "A001", "ANN201", "ANN001"]
[tool.ruff.format]
docstring-code-format = true
preview = true

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
